# FEMDeal

./: .gitignore  CMakeLists.txt  Reading.txt  cmake_clean.sh
include/: DataOutput.h  GridLoader.h  Problem.h  ProblemGenerator.h
old/: composite.cc
src/: DataOutput.cpp  GridLoader.cpp  Problem.cpp  ProblemGenerator.cpp  main.cpp
